syntax = "proto3";

option go_package = "github.com/piroyoung/lanterne/grpc";


message Vertex {
    string key = 1;
}

message Edge {
    Vertex tail = 1;
    Vertex head = 2;
    float weight = 3;
}

message Graph {
    repeated Vertex Vertices = 1;
    repeated Edge Edges = 2;
}

enum Status {
    OK = 0;
    INTERNAL_SERVER_ERROR = 1;
    INVALID_REQUEST = 2;
}

message IlluminateRequest {
    Vertex seed = 1;
    uint32 degree = 2;
    float min_weight = 3;
    float max_weight = 4;
}

message IlluminateResponse {
    Graph graph = 1;
    Status status = 2;
}

message DumpResponse {
    Status status = 1;
}

service Lanterne {
    rpc Illuminate (IlluminateRequest) returns (IlluminateResponse) {
    }
    rpc DumpVertex (Vertex) returns (DumpResponse) {
    }
    rpc DumpEdge (Edge) returns (DumpResponse) {
    }
}
